[package]
name = "eggwrap"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "eggwrap"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = "0.19.0"
egg = { version = "0.9.4", features = ["lp"] }
ndarray = "0.15"
clap = "2.33"

[[bin]]
name = "cso"
path = "src/main.rs"

[build]
rustflags = ["-Awarnings"]